--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Chat App</title>
   </head>
   <body>
-    <div id="root">Loading....</div>
+    <div id="root"></div>
   </body>
 </html>
